sonda-core/tests/snapshots/v2_compile_after_fixtures__valid_compile_cross_signal_type.snap
---
source: sonda-core/tests/v2_compile_after_fixtures.rs
expression: compiled
---
{
  "version": 2,
  "entries": [
    {
      "id": "error_rate",
      "signal_type": "metrics",
      "name": "http_error_rate",
      "rate": 1.0,
      "duration": "3m",
      "generator": {
        "type": "saturation",
        "baseline": 1.0,
        "ceiling": 30.0,
        "time_to_saturate": "90s"
      },
      "log_generator": null,
      "labels": null,
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": "chain_error_logs",
      "clock_group_is_auto": true,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    },
    {
      "id": "error_logs",
      "signal_type": "logs",
      "name": "app_error_logs",
      "rate": 1.0,
      "duration": "3m",
      "generator": null,
      "log_generator": {
        "type": "template",
        "templates": [
          {
            "message": "upstream timeout",
            "field_pools": {}
          }
        ],
        "severity_weights": null,
        "seed": null
      },
      "labels": null,
      "dynamic_labels": null,
      "encoder": {
        "type": "json_lines",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": "27.931s",
      "clock_group": "chain_error_logs",
      "clock_group_is_auto": true,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    }
  ]
}
