sonda-core/tests/snapshots/v2_compile_after_fixtures__valid_compile_phase_offset_and_delay.snap
---
source: sonda-core/tests/v2_compile_after_fixtures.rs
expression: compiled
---
{
  "version": 2,
  "entries": [
    {
      "id": "link",
      "signal_type": "metrics",
      "name": "interface_oper_state",
      "rate": 1.0,
      "duration": "5m",
      "generator": {
        "type": "flap",
        "up_duration": "60s",
        "down_duration": "30s",
        "up_value": null,
        "down_value": null
      },
      "log_generator": null,
      "labels": null,
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": "chain_backup",
      "clock_group_is_auto": true,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    },
    {
      "id": "backup",
      "signal_type": "metrics",
      "name": "backup_util",
      "rate": 1.0,
      "duration": "5m",
      "generator": {
        "type": "constant",
        "value": 1.0
      },
      "log_generator": null,
      "labels": null,
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": "85s",
      "clock_group": "chain_backup",
      "clock_group_is_auto": true,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    }
  ]
}
