sonda-core/tests/snapshots/v2_compile_after_fixtures__valid_compile_sequence_target.snap
---
source: sonda-core/tests/v2_compile_after_fixtures.rs
expression: compiled
---
{
  "version": 2,
  "entries": [
    {
      "id": "seq",
      "signal_type": "metrics",
      "name": "health_probe",
      "rate": 2.0,
      "duration": "1m",
      "generator": {
        "type": "sequence",
        "values": [
          10.0,
          5.0,
          2.0,
          1.0
        ],
        "repeat": false
      },
      "log_generator": null,
      "labels": null,
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": "chain_alert",
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    },
    {
      "id": "alert",
      "signal_type": "metrics",
      "name": "alert",
      "rate": 2.0,
      "duration": "1m",
      "generator": {
        "type": "constant",
        "value": 1.0
      },
      "log_generator": null,
      "labels": null,
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": "1s",
      "clock_group": "chain_alert",
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    }
  ]
}
