sonda-core/tests/snapshots/v2_compile_after_fixtures__valid_compile_step_target.snap
---
source: sonda-core/tests/v2_compile_after_fixtures.rs
expression: compiled
---
{
  "version": 2,
  "entries": [
    {
      "id": "counter",
      "signal_type": "metrics",
      "name": "req_total",
      "rate": 2.0,
      "duration": "2m",
      "generator": {
        "type": "step",
        "start": 0.0,
        "step_size": 10.0,
        "max": null
      },
      "log_generator": null,
      "labels": null,
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": "chain_alarm",
      "clock_group_is_auto": true,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    },
    {
      "id": "alarm",
      "signal_type": "metrics",
      "name": "alarm_flag",
      "rate": 2.0,
      "duration": "2m",
      "generator": {
        "type": "constant",
        "value": 1.0
      },
      "log_generator": null,
      "labels": null,
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": "3s",
      "clock_group": "chain_alarm",
      "clock_group_is_auto": true,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    }
  ]
}
